<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lab 2</string>
    <string name="hello_message">Hello world</string>
    <string name="here_are_my_widgets">Here are my widgets:</string>
    <string name="button">button</string>
    <string name="todo">TODO</string>
    <string name="check_this_out">Check this out!</string>
    <string name="switch_on_off">Switch on/off</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="login">LOGIN</string>
    <string name="type_password_here">Type password here</string>
    <string name="type_your_address">Type your address:</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="sharedEmail" tools:ignore="MissingTranslation"></string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="type_here">Type here</string>

</resources>
