<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rowCount="4"
    android:columnCount="2"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/here_are_my_widgets"
        android:textSize="30sp"
        android:layout_columnSpan="2"
        android:layout_rowSpan="1" />

    <Button
        android:id="@+id/button"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:contentDescription="@string/todo" />

    <CheckBox
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:text="@string/check_this_out"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowSpan="1" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_on_off"
        android:layout_columnSpan="1"
        android:layout_row="2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_answer_here"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_rowSpan="1" />

</GridLayout>
