<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"

    >

<TextView
    android:id="@+id/line1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enter_your_email_address"/>

<EditText
    android:id="@+id/line2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:hint="type_email_here"
    android:inputType="textWebEmailAddress" />


<TextView
    android:id="@+id/line3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/type_your_address" />


<EditText
    android:id="@+id/passwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/type_password_here"
    android:inputType="textPassword"

    android:autofillHints="" />

<Button
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login" />

</LinearLayout>