<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:text="@string/here_are_my_widgets"
        android:textSize="30sp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_toStartOf="@id/imgbtn"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview"
        android:text="@string/button" />

    <ImageButton
        android:id="@+id/imgbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textview"
        android:src="@drawable/flag"
        android:contentDescription="@string/todo" />


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/imgbtn"
        android:text="@string/check_this_out"
        android:layout_alignParentStart="true"
        android:layout_below="@id/imgbtn"
        />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgbtn"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@id/checkbox"
        android:text="Switch" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_alignParentBottom="@+id/textview"
        android:layout_marginTop="0dp"
        android:hint="Type your answer here!"
        android:autofillHints=""
        android:inputType="" tools:targetApi="o"/>

</RelativeLayout>
